# maskj

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  mj_root_proposal.md  ui_foundation.md  vcpkg.json
.github/workflows/: release.yml
include/: network_manager.hpp
include/av_net/: network_manager.hpp
include/av_root/: av_button.hpp  av_custom.hpp  av_div.hpp  av_inter_view_shared_state.hpp  av_request.hpp  im_scope.hpp  root.hpp  ui_component.hpp  ui_scoped_style.hpp
include/av_s/: av_request_headers_storage.hpp  av_request_params_storage.hpp  av_request_storage.hpp  av_storage.hpp
include/av_ui/: av_request.hpp  detailed_request_view_ui.hpp  logo_icon.hpp  network_manager_ui.hpp
include/mj_net/: network_manager.hpp
scripts/: bake_icon.ps1  install.sh  new_class.ps1  new_class.sh
src/: av_button.cpp  av_custom.cpp  av_div.cpp  main.cpp  network_manager.cpp  network_manager_ui.cpp  root.cpp  ui_component.cpp
src/av_net/: network_manager.cpp
src/av_root/: root.cpp  ui_scoped_style.cpp
src/av_s/: av_request_headers_storage.cpp  av_request_params_storage.cpp  av_request_storage.cpp  av_storage.cpp
src/av_ui/: detailed_request_view_ui.cpp  json_tree_view.cpp  request_list_view_ui.cpp  root_ui.cpp
